# Lunar

./: .gitignore  LICENSE  Lunar.sln  README.md
.github/workflows/: ci.yml
Lunar/: LibraryMapper.cs  Lunar.csproj  MappingFlags.cs
Lunar.Tests/: Lunar.Tests.csproj  MappingTester.cs  X64Tests.cs  X86Tests.cs
Lunar.Tests/TestBinaries/: Build.bat  CMakeLists.txt  Exception.cpp  Executable.cpp  TlsCallBack.cpp
Lunar.Tests/TestBinaries/Executables/: Target.cpp
Lunar.Tests/TestBinaries/Libraries/: Basic.cpp  Exception.cpp  Manifest.cpp  StaticTls.cpp  TlsCallBack.cpp  TlsCallback.cpp
Lunar.Tests/TestLibraries/: Basic.cpp  Exception.cpp  TlsCallBack.cpp
Lunar/Assembler/: CallAssembler.cs  RoutineAssembler.cs
Lunar/Assembler/Structures/: CallDescriptor.cs  RoutineDescriptor.cs
Lunar/Assembly/: Assembler.cs
Lunar/Assembly/Structures/: CallDescriptor.cs
Lunar/Extensions/: ListExtensions.cs  NtStatusExtensions.cs  ProcessExtensions.cs  ProcessThreadExtensions.cs
Lunar/FileResolution/: ActivationContext.cs  ApiSetMap.cs  ApiSetResolver.cs  FileResolver.cs
Lunar/FileResolution/Records/: ManifestDirectory.cs
Lunar/FileResolution/Structures/: ManifestDirectory.cs
Lunar/FunctionCall/: Assembler.cs
Lunar/FunctionCall/Structures/: CallDescriptor.cs
Lunar/Helpers/: BitmapManager.cs  Executor.cs
Lunar/Native/: Constants.cs
Lunar/Native/Enumerations/: AccessMask.cs  AllocationType.cs  BaseRelocationType.cs  DllReason.cs  FreeType.cs  ModuleType.cs  NtStatus.cs  ProcessInformationClass.cs  ProcessInformationType.cs  ProtectionType.cs  RelocationType.cs  SymbolOptions.cs  ThreadCreationFlags.cs
Lunar/Native/Enums/: AccessMask.cs  AllocationType.cs  DllReason.cs  FreeType.cs  GuardFlags.cs  HeapAllocationType.cs  ModuleType.cs  NtStatus.cs  ProcessInformationType.cs  ProtectionType.cs  RelocationType.cs  SymbolOptions.cs  ThreadExitCode.cs  ThreadInformationType.cs
Lunar/Native/PInvoke/: Dbghelp.cs  Kernel32.cs  Ntdll.cs
Lunar/Native/SafeHandle/: SafeThreadHandle.cs  SafeWin32Handle.cs
Lunar/Native/SafeHandles/: SafeThreadHandle.cs
Lunar/Native/Structs/: ApiSetHashEntry.cs  ApiSetNamespace.cs  ApiSetNamespaceEntry.cs  ApiSetValueEntry.cs  ImageBaseRelocation.cs  ImageExportDirectory.cs  ImageImportDescriptor.cs  ImageLoadConfigDirectory.cs  ImageResourceDataEntry.cs  ImageResourceDirectory.cs  ImageResourceDirectoryEntry.cs  ImageTlsDirectory.cs  InvertedFunctionTable.cs  InvertedFunctionTableEntry.cs  KUserSharedData.cs  LdrDataTableEntry.cs  LdrpTlsEntry.cs  ListEntry.cs  Peb.cs  ProcessBasicInformation.cs  RtlBitmap.cs  SymbolInfo.cs  Teb.cs  ThreadBasicInformation.cs  TlsReclaimTableEntry.cs  TlsVector.cs
Lunar/Native/Structures/: ApiSetHashEntry.cs  ApiSetNamespace.cs  ApiSetNamespaceEntry.cs  ApiSetValueEntry.cs  ImageBaseRelocation.cs  ImageExportDirectory.cs  (+19 more)
Lunar/Pdb/: PdbParser.cs
Lunar/PortableExecutable/: DataDirectory.cs  DataDirectoryBase.cs  PeImage.cs
Lunar/Remote/: ApiSetMap.cs  HeapManager.cs  Loader.cs  Memory.cs  PebLock.cs  ProcessContext.cs  SafePebLock.cs  SymbolHandler.cs
Lunar/RemoteProcess/: Memory.cs  PebAccessor.cs  ProcessManager.cs
Lunar/RoutineCall/: Assembler.cs
Lunar/Shared/: ExceptionBuilder.cs  Executor.cs  SafeHelpers.cs
Lunar/Shellcode/: Assembler.cs  ShellcodeAssembler.cs
Lunar/Symbol/: SymbolHandler.cs  SymbolParser.cs
Lunar/Utilities/: DependencyManager.cs  Executor.cs  SafeHelpers.cs  UnsafeHelpers.cs
(+37 files in other folders)
